[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/Designer.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/unbutton.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Lobby.gd" type="Script" id=3]
[ext_resource path="res://Textures/Untitled.png" type="Texture" id=4]
[ext_resource path="res://Players_list_display.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 63
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.490196, 0.545098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.27451, 0.772549, 0.741176, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0941176, 0.34902, 0.388235, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.27451, 0.772549, 0.741176, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=3]
size = 131
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 83
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Lobby" type="Node2D"]
script = ExtResource( 3 )

[node name="Ui1" type="Sprite" parent="."]
position = Vector2( 958.259, 536.5 )
scale = Vector2( 2.00682, 2.42955 )
texture = ExtResource( 4 )

[node name="Create" type="Button" parent="."]
visible = false
margin_left = 784.0
margin_top = 397.0
margin_right = 1141.0
margin_bottom = 513.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Create"

[node name="Title" type="Label" parent="."]
visible = false
margin_left = 736.0
margin_top = 91.0
margin_right = 1179.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 3 )
text = "LOBBY"
align = 1
valign = 1

[node name="Players_list_display" type="GridContainer" parent="."]
margin_left = 248.0
margin_top = 395.0
margin_right = 1650.0
margin_bottom = 746.0
custom_constants/vseparation = 109
custom_constants/hseparation = 402
columns = 2
script = ExtResource( 5 )

[node name="Start" type="Button" parent="."]
margin_left = 801.0
margin_top = 844.0
margin_right = 1191.0
margin_bottom = 1001.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[connection signal="pressed" from="Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
